--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -63,8 +63,7 @@
     "backfill-sofar-time-series": "ts-node -r dotenv/config scripts/backfill-sofar-time-series.ts",
     "update-wind-wave-data": "ts-node -r dotenv/config scripts/hindcast-wind-wave-data.ts",
     "resize-survey-images": "ts-node -r dotenv/config scripts/resize-survey-images.ts",
-    "fill-noaa-nearest-point": "ts-node -r dotenv/config scripts/noaa-availability.ts",
-    "github-pr-comment": "ts-node -r dotenv/config scripts/comment-github.ts"
+    "fill-noaa-nearest-point": "ts-node -r dotenv/config scripts/noaa-availability.ts"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
@@ -124,7 +123,6 @@
     "@types/passport-strategy": "^0.2.35",
     "@types/sharp": "^0.30.4",
     "@types/supertest": "^2.0.8",
-    "circleci-pr-commenter": "^0.1.2",
     "faker": "^4.1.0",
     "firebase-admin": "^9.0.0",
     "firebase-functions": "^3.8.0",
