--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       surge_url: aqualink-app-${{ github.event.pull_request.number }}.surge.sh
+      REACT_APP_API_BASE_URL: ${{ vars.REACT_APP_API_BASE_URL }}
+      REACT_APP_FEATURED_SITE_ID: ${{ vars.REACT_APP_FEATURED_SITE_ID }}
+      REACT_APP_FIREBASE_API_KEY: ${{ vars.REACT_APP_FIREBASE_API_KEY }}
+      REACT_APP_MAPBOX_ACCESS_TOKEN: ${{ vars.REACT_APP_MAPBOX_ACCESS_TOKEN }}
+      REACT_APP_SOFAR_API_TOKEN: ${{ vars.REACT_APP_SOFAR_API_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -49,6 +54,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+        env:
+          NODE_OPTIONS: ${{ vars.NODE_OPTIONS }}
 
       - uses: actions/cache@v2
         id: yarn-cache
@@ -98,6 +105,14 @@ jobs:
     env:
       DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
       TEST_DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+      BACKEND_BASE_URL: ${{ vars.BACKEND_BASE_URL }}
+      STORAGE_MAX_FILE_SIZE_MB: ${{ vars.STORAGE_MAX_FILE_SIZE_MB }}
+
+      GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
+      GCS_KEYFILE: ${{ secrets.GCS_KEYFILE }}
+      GC_PROJECT: ${{ secrets.GC_PROJECT }}
+      SOFAR_API_TOKEN: ${{ secrets.SOFAR_API_TOKEN }}
+      STORAGE_FOLDER: ${{ secrets.STORAGE_FOLDER }}
     services:
       postgres:
         image: kartoza/postgis:12.1
@@ -116,6 +131,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+        env:
+          NODE_OPTIONS: ${{ vars.NODE_OPTIONS }}
 
       - uses: actions/cache@v2
         id: yarn-cache
