--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,12 +40,13 @@ jobs:
     needs: build_dependencies
     runs-on: ubuntu-latest
     env:
+      REACT_APP_MAPBOX_ACCESS_TOKEN: ${{ secrets.REACT_APP_MAPBOX_ACCESS_TOKEN }}
+      REACT_APP_SOFAR_API_TOKEN: ${{ secrets.REACT_APP_SOFAR_API_TOKEN }}
+      REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+
       surge_url: aqualink-app-${{ github.event.pull_request.number }}.surge.sh
       REACT_APP_API_BASE_URL: ${{ vars.REACT_APP_API_BASE_URL }}
       REACT_APP_FEATURED_SITE_ID: ${{ vars.REACT_APP_FEATURED_SITE_ID }}
-      REACT_APP_FIREBASE_API_KEY: ${{ vars.REACT_APP_FIREBASE_API_KEY }}
-      REACT_APP_MAPBOX_ACCESS_TOKEN: ${{ vars.REACT_APP_MAPBOX_ACCESS_TOKEN }}
-      REACT_APP_SOFAR_API_TOKEN: ${{ vars.REACT_APP_SOFAR_API_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -54,8 +55,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-        env:
-          NODE_OPTIONS: ${{ vars.NODE_OPTIONS }}
 
       - uses: actions/cache@v2
         id: yarn-cache
@@ -131,8 +130,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-        env:
-          NODE_OPTIONS: ${{ vars.NODE_OPTIONS }}
 
       - uses: actions/cache@v2
         id: yarn-cache
