--- a/package.json
+++ b/package.json
@@ -56,5 +56,18 @@
     "packages/*/{src,scripts,test}/**/*.{js,jsx,ts,tsx}": [
       "yarn run lint"
     ]
-  }
+  },
+  "description": "This is the main repository for the Aqualink Coral Monitoring Application.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aqualinkorg/aqualink-app.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aqualinkorg/aqualink-app/issues"
+  },
+  "homepage": "https://github.com/aqualinkorg/aqualink-app#readme"
 }
