--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "test:watch": "lerna run test:watch --parallel",
     "publish:release": "lerna publish --force-publish=* --no-push --no-git-tag-version"
   },
+  "resolutions": {},
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.59.7",
     "babel-eslint": "^10.1.0",
     "cross-spawn": "^7.0.02",
     "eslint": "^7.32.0",
@@ -43,7 +44,7 @@
     "typescript": "^4.5.5"
   },
   "engines": {
-    "node": "16.x",
+    "node": "18.x",
     "yarn": "^1.22"
   },
   "version": "0.0.0",
