--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "ignorePatterns": ["**/db_data/**"],
   "rules": {
     "no-useless-constructor": "off",
     "no-empty-function": ["error", { "allow": ["constructors"] }],
