--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -141,6 +141,6 @@
     "yargs": "^15.4.1"
   },
   "optionalDependencies": {
-    "netcdf4": "https://github.com/parro-it/netcdf4"
+    "netcdf4": "file:../../../netcdf4"
   }
 }
