--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "cross-env EXTEND_ESLINT=true react-scripts start",
+    "start": "cross-env EXTEND_ESLINT=true GENERATE_SOURCEMAP=false BROWSER=none react-scripts start",
     "build": "cross-env EXTEND_ESLINT=true react-scripts build",
     "test": "react-scripts --expose-gc test --logHeapUsage --maxWorkers=2",
     "eject": "react-scripts eject",
@@ -37,7 +37,6 @@
     "firebase": "^7.16.1",
     "firebase-tools": "^11.29.1",
     "immutable": "^4.0.0-rc.12",
-    "jsonwebtoken": "^9.0.0",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.15",
     "material-table": "^1.65.0",
@@ -51,12 +50,12 @@
     "react-dropzone": "^11.0.3",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.41.5",
+    "react-jwt": "^1.1.8",
     "react-leaflet": "^2.7.0",
     "react-leaflet-markercluster": "^2.0.0",
     "react-material-ui-carousel": "^1.8.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.3",
     "react-slick": "^0.27.10",
     "react-swipeable-bottom-sheet": "^1.1.2",
     "react-swipeable-views": "^0.13.9",
@@ -84,14 +83,13 @@
     ]
   },
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.27",
     "@types/classnames": "^2.2.10",
     "@types/immutable": "^3.8.7",
     "@types/jest": "^24.0.0",
-    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -103,9 +101,10 @@
     "@types/react-swipeable-views": "^0.13.0",
     "@types/redux-mock-store": "^1.0.2",
     "@types/validator": "^13.1.0",
-    "canvas": "^2.8.0",
+    "canvas": "^2.11.2",
     "cross-env": "^7.0.2",
     "dotenv-cli": "^4.0.0",
+    "react-scripts": "5.0.1",
     "surge": "^0.23.1"
   }
 }
