--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:watch": "lerna run test:watch --parallel",
     "publish:release": "lerna publish --force-publish=* --no-push --no-git-tag-version"
   },
-  "resolutions": {},
+  "resolutions": {
+    "@types/react": "^16.9.0"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.59.7",
