--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -132,12 +132,13 @@
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0",
-    "ts-loader": "^6.2.1",
+    "ts-loader": "^9.4.3",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
     "typeorm-seeding": "^1.6.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.84.0",
+    "webpack-cli": "^5.1.1",
+    "webpack-node-externals": "^3.0.0",
     "yargs": "^15.4.1"
   },
   "optionalDependencies": {
