--- a/.github/workflows/build_api.yml
+++ b/.github/workflows/build_api.yml
@@ -50,6 +50,11 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      
+      - name: Install dependencies if needed.
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: |
+          yarn install --ignore-engines --frozen-lockfile
 
       - name: Run API lint
         if: success() || failure()
