--- a/.github/workflows/build_website.yml
+++ b/.github/workflows/build_website.yml
@@ -39,6 +39,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - name: Install dependencies if needed.
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: |
+          yarn install --ignore-engines --frozen-lockfile
+
       - name: Run website lint
         if: success() || failure()
         working-directory: packages/website
