Remove webpack for functions deployment

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -5,9 +5,9 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=54321
 POSTGRES_DATABASE=postgres
 TEST_POSTGRES_DATABASE=test_ovio
-FIREBASE_PROJECT_ID=
-FIREBASE_PRIVATE_KEY=
-FIREBASE_CLIENT_EMAIL=
+FB_PROJECT_ID=
+FB_PRIVATE_KEY=
+FB_CLIENT_EMAIL=
 GC_PROJECT=
 GCS_BUCKET=
 GCS_KEYFILE=gcloud.json
