--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "workspaces": [
     "packages/*"
   ],
+  "main": "./packages/api/cloud-functions/dist/cloud-functions/index.js",
   "scripts": {
     "lint": "eslint --cache --cache-location node_modules/.cache/eslint --fix",
     "lint:all": "lerna run lint",
@@ -46,7 +47,7 @@
     "typescript": "^4.5.5"
   },
   "engines": {
-    "node": "18.x",
+    "node": "18",
     "yarn": "^1.22"
   },
   "version": "0.0.0",
