Re add per-prossesing script

--- a/packages/api/.gitignore
+++ b/packages/api/.gitignore
@@ -21,6 +21,7 @@
 
 # Firebase Cloud Functions Generated files
 cloud-functions/dist/*
+cloud-functions/main.ts
 
 # Google Cloud Storage Congig
 gcloud.json*
