--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build -p tsconfig.build.json --tsc",
-    "build:cloud-functions": "tsc -p ./cloud-functions/tsconfig.json",
+    "build:cloud-functions": "node cloud-functions/add-entities.js && tsc -p ./cloud-functions/tsconfig.json",
     "gcp-build": "npm install yarn",
     "predeploy:app": "mv .env .env.bkp && cp .env.${DEPLOY_ENV} .env && yarn run build && cp ../../yarn.lock .",
     "deploy:app": "gcloud app deploy app-${DEPLOY_ENV}.yaml && yarn migration:run",
@@ -83,7 +83,6 @@
     "class-validator": "^0.14.0",
     "csv-parse": "^4.15.1",
     "express": "^4.17.1",
-    "firebase-admin": "^8.6.0",
     "geo-tz": "^6.0.0",
     "geojson": "^0.5.0",
     "geotiff": "^1.0.4",
@@ -115,13 +114,13 @@
     "@types/lodash": "^4.14.156",
     "@types/moment-timezone": "^0.5.13",
     "@types/multer": "^1.4.3",
-    "@types/node": "^18.2.3",
+    "@types/node": "^18.16.16",
     "@types/passport": "^1.0.4",
     "@types/passport-strategy": "^0.2.35",
     "@types/sharp": "^0.30.4",
     "@types/supertest": "^2.0.8",
     "faker": "^4.1.0",
-    "firebase-admin": "^8.6.0",
+    "firebase-admin": "^9.0.0",
     "firebase-functions": "^3.8.0",
     "glob": "^7.1.6",
     "jest": "26.6.0",
@@ -129,7 +128,7 @@
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
     "typeorm-seeding": "^1.6.1",
     "yargs": "^15.4.1"
