--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -83,6 +83,7 @@
     "class-validator": "^0.14.0",
     "csv-parse": "^4.15.1",
     "express": "^4.17.1",
+    "firebase-admin": "^9.0.0",
     "geo-tz": "^6.0.0",
     "geojson": "^0.5.0",
     "geotiff": "^1.0.4",
