Remove webpack for functions deployment (#866)
* Remove webpack for functions deployment

* Fix functions would not get config

* App would not start in docker

* Re add per-prossesing script

* Add firebase-admin to deps

* Update ONBOARDING.md

--- a/packages/api/.gitignore
+++ b/packages/api/.gitignore
@@ -20,8 +20,8 @@
 .runtimeconfig.json
 
 # Firebase Cloud Functions Generated files
-cloud-functions/dist/*.js
-cloud-functions/dist/*.txt
+cloud-functions/dist/*
+cloud-functions/main.ts
 
 # Google Cloud Storage Congig
 gcloud.json*
