Update deprecated ::set-output

--- a/.github/workflows/build_website.yml
+++ b/.github/workflows/build_website.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H:%M:%S')"
+        run: echo "date=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_OUTPUT
 
       - name: Comment PR
         uses: marocchino/sticky-pull-request-comment@v1
